--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,8 +14,8 @@ services:
   app_service_global:
     container_name: 'go-global'
     image: go-global
-    build:
-       command: cd Warehouse-Service-Global && docker build -t go-global .
+    build: .
+    command: bash -c "cd Warehouse-Service-Global && docker build -t go-global ."
     ports:
        - "5554:5554"
     depends_on:
@@ -24,8 +24,8 @@ services:
   app_service_input:
     container_name: 'go-input'
     image: go-input
-    build:
-      command: cd Warehouse-Service-Input && docker build -t go-input .
+    build: .
+    command: bash -c "cd Warehouse-Service-Input && docker build -t go-input ."
     ports:
       - "8554:8554"
     depends_on:
@@ -34,8 +34,8 @@ services:
   app_service_master:
     container_name: 'go-master'
     image: go-master
-    build:
-      command: cd Warehouse-Service-Master && docker build -t go-master .
+    build: .
+    command: bash -c "cd Warehouse-Service-Master && docker build -t go-master ."
     ports:
       - '7554:7554'
     depends_on:
@@ -44,8 +44,8 @@ services:
   app_service_output:
     container_name: 'go-output'
     image: go-output
-    build:
-      command: cd Warehouse-Service-Output && docker build -t go-output .
+    build: .
+    command: bash -c "cd Warehouse-Service-Output && docker build -t go-output ."
     ports:
       - "9554:9554"
     depends_on:
@@ -54,8 +54,8 @@ services:
   app_service_reject:
     container_name: 'go-reject'
     image: go-reject
-    build:
-      command: cd Warehouse-Service-Reject && docker build -t go-reject .
+    build: .
+    command: bash -c "cd Warehouse-Service-Reject && docker build -t go-reject ."
     ports:
       - '6554:6554'
     depends_on:
