--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,19 +2,18 @@ version: '3.8'
 services:
   mongo:
     image: mongo
-    container_name: "mongo"
+    container_name: "mongo-database"
     restart: always
+    environment:
+      MONGO_INITDB_ROOT_DATABASE: WServiceMaster
     volumes:
       - './dockervolume/mongodb:/data/db'
     ports:
       - 27017:27017
-    networks:
-      - WServiceNetwork
 
   app_service_global:
     container_name: 'go-global'
-    image: go-global
-    build: .
+    image: aboutindra/go-global
     command: bash -c "cd Warehouse-Service-Global && docker build -t go-global ."
     ports:
        - "5554:5554"
@@ -23,8 +22,7 @@ services:
 
   app_service_input:
     container_name: 'go-input'
-    image: go-input
-    build: .
+    image: aboutindra/go-input
     command: bash -c "cd Warehouse-Service-Input && docker build -t go-input ."
     ports:
       - "8554:8554"
@@ -33,8 +31,7 @@ services:
 
   app_service_master:
     container_name: 'go-master'
-    image: go-master
-    build: .
+    image: aboutindra/go-master
     command: bash -c "cd Warehouse-Service-Master && docker build -t go-master ."
     ports:
       - '7554:7554'
@@ -43,8 +40,7 @@ services:
 
   app_service_output:
     container_name: 'go-output'
-    image: go-output
-    build: .
+    image: aboutindra/go-output
     command: bash -c "cd Warehouse-Service-Output && docker build -t go-output ."
     ports:
       - "9554:9554"
@@ -53,8 +49,7 @@ services:
 
   app_service_reject:
     container_name: 'go-reject'
-    image: go-reject
-    build: .
+    image: aboutindra/go-reject
     command: bash -c "cd Warehouse-Service-Reject && docker build -t go-reject ."
     ports:
       - '6554:6554'
